--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.1.1",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "node": "^12.22.1"
   },
   "dependencies": {
     "gulp-htmlmin": "^5.0.1"
